# Nova

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md
atlas/: README.md
atlas/_pre-consolidation/: PROJECT_PLAN.md
aurora/: COMPETITIVE_ANALYSIS.md  IMPLEMENTATION_BACKLOG.md  PROJECT_PLAN.md  README.md
aurora/_pre-consolidation/: ARCHITECTURE_DECISIONS.md  PHASE0_CHECKLIST.md
aurora/oidn-research/: OIDN_NOTES.md
cascade/: ARCHITECTURE_DECISIONS.md  IMPLEMENTATION_BACKLOG.md  PROJECT_PLAN.md  README.md  RESEARCH_PAPERS.md  SConstruct  cascade.gdextension
cascade/_pre-consolidation/: COMPETITIVE_ANALYSIS.md  COMPETITIVE_PLAN.md  PHASE0_CHECKLIST.md
cascade/blast-research/: INTEGRATION_PLAN.md
cascade/cascade/: README.md
cascade/cascade/src/: cascade_cloth.h  cascade_cloth.os  cascade_compute_test.cpp  cascade_compute_test.os  cascade_fluid.os  cascade_fracture.h  cascade_fracture.os  cascade_world.cpp  cascade_world.os  register_types.os
cascade/src/: cascade_cloth.cpp  cascade_cloth.h  cascade_compute_test.h  cascade_fluid.cpp  cascade_fluid.h  cascade_fracture.cpp  cascade_world.h  cloth_shaders.h  fluid_shaders.h  register_types.cpp  register_types.h
cascade/test-project/: cascade.gdextension  cascade.gdextension.uid  cloth_material.gdshader  demo_scene.tscn  project.godot  test_scene.tscn
demo/: main.tscn  tempest.gdextension
demo/addons/kinetic/: README.md  bvh_importer.gd  motion_database.gd  motion_matching_player.gd  spring_utils.gd
demo/addons/resonance/: resonance_plugin.gd
demo/addons/scatter/: README.md  plugin.cfg  scatter_point.gd
docs/: OVERVIEW.md  SYNTHESIS.md
forge/: PROJECT_PLAN.md
godot-parity-demo/: README.md  cascade.gdextension  project.godot  setup.sh
godot-parity-demo/addons/kinetic/: kinetic_plugin.gd  plugin.cfg
godot-parity-demo/addons/resonance/: README.md  plugin.cfg
kinetic/: MOTION_MATCHING_NOTES.md  README.md
kinetic/_pre-consolidation/: PROJECT_PLAN.md
kinetic/addons/kinetic/: motion_database.gd  spring_utils.gd
kinetic/kinetic-plugin/test-project/: test_bvh.gd  test_scene.tscn
kinetic/test-project/: project.godot  test_controller.gd  test_controller.gd.uid  test_scene.tscn
meridian/: .gitignore  BENCHMARK_PLAN.md  CLAUDE_CODE_GUIDE.md  IMPLEMENTATION_BACKLOG.md  IMPLEMENTATION_STATUS.md  PHASE0_CHECKLIST.md  PROJECT_PLAN.md  README.md  TASK_LIST.md  project.godot
meridian/addons/meridian_importer/: plugin.cfg  plugin.gd  plugin.gd.uid  vgeo_import_plugin.gd  vgeo_import_plugin.gd.uid  vgeo_import_resource.gd  vgeo_import_resource.gd.uid
meridian/assets/: README.md
meridian/benchmarks/: HARDWARE_PROFILES.md  IMPORT_VALIDATION_WORKFLOW.md  README.md
meridian/benchmarks/replays/: README.md  arch_streaming_replay.txt  gltf_streaming_replay.txt  sample_material_replay.txt  sparse_gltf_streaming_replay.txt  terrace_streaming_replay.txt  uv_seam_gltf_replay.txt
meridian/benchmarks/results/: FROZEN_SYNTHETIC_GODOT_BASELINE.md  RESULT_TEMPLATE.csv  RESULT_TEMPLATE.en.translation  RESULT_TEMPLATE.md  external_fuzz_import_validation.md  external_pirate_import_validation.md  godot_baseline_benchmark_arch_block.json  godot_baseline_benchmark_arch_block.md  godot_baseline_benchmark_gltf_block.json  godot_baseline_benchmark_gltf_block.md  godot_baseline_benchmark_terrace.json  godot_baseline_benchmark_terrace.md  godot_baseline_external_fuzz.json  godot_baseline_external_fuzz.md  godot_baselines.csv  godot_baselines.en.translation  workflow_gltf_block_import_validation.md
meridian/benchmarks/scenes/: SCENE_MANIFEST.md  (+5 more)
meridian/docs/: ARCHITECTURE_DECISIONS.md  COMPETITIVE_PLAN.md  FRONTIER_OPPORTUNITIES.md  GODOT_UNREAL_GAP_ANALYSIS.md  IMPLEMENTATION_STATUS.md  READING_LIST.md  TASK_LIST.md  TECHNICAL_SPEC.md
meridian/godot-vgeo/: README.md
meridian/lumen_gdExtension/: PLAN.md
meridian/notes/: PHASE0_STATUS.md  RUNTIME_DELIVERY_FEASIBILITY.md
meridian/prototype/: CMakeLists.txt  README.md
meridian/prototype/shaders/: cluster_select.comp  depth_copy.comp  hzb_downsample.comp  instance_cull.comp  main_geometry.frag  main_geometry.vert  occlusion_refine.comp  shadow.vert
meridian/prototype/src/: async_reader.cpp  async_reader.h  bootstrap_main.cpp  builder_cluster.cpp  builder_import.cpp  builder_internal.h  builder_serialize.cpp  builder_traversal.cpp  builder_validate.cpp  dump_main.cpp  gpu_abi.h  gpu_profiler.cpp  gpu_profiler.h  main.cpp  math_utils.h  replay_main.cpp  replay_script.cpp  replay_script.h  residency_main.cpp  resource_upload.cpp  resource_upload.h  runtime_contract.h  runtime_model.cpp  runtime_model.h  shader_loader.h  streaming_scheduler.cpp  streaming_scheduler.h  trace_main.cpp  vgeo_builder.cpp  vgeo_builder.h  visibility_format.h  vk_bootstrap.h  vk_bootstrap.mm  vk_compute_cull.cpp  vk_compute_selection.cpp  vk_context.h  vk_helpers.h  vk_hzb.cpp  vk_occlusion.cpp  vk_render.cpp  (+1 more)
meridian/schemas/: PAGE_LAYOUT_SCHEMA.md  VGEO_RESOURCE_SCHEMA.md
meridian/tools/: README.md  sample_asset_manifest.txt
resonance/: README.md
resonance/_pre-consolidation/: PROJECT_PLAN.md
resonance/labsound-research/: LABSOUND_NOTES.md
resonance/nodes/: gain_node.gd  output_node.gd
resonance/resonance-plugin/: audio_graph.gd
resonance/steam-audio-test/: TEST_NOTES.md
resonance/test-project/: project.godot
scatter/: PROJECT_PLAN.md  README.md  scatter_graph.gd
scatter/graph_editor/: node_palette.gd  scatter_graph_editor.gd
scatter/nodes/: align_to_normal.gd  instance_placer.gd  noise_filter.gd  scatter_node.gd  slope_filter.gd  spline_sampler.gd  surface_sampler.gd
scatter/scatter-plugin/: scatter_plugin.gd
scatter/test-project/: project.godot  test_scatter.gd  test_scatter.gd.uid  test_scene.tscn
tempest/: README.md  tempest.gdextension
tempest/_pre-consolidation/: PROJECT_PLAN.md
tempest/src/: particle_shaders.h  register_types.cpp  register_types.h  tempest_emitter.cpp
tempest/tempest/: README.md  SConstruct  godot-cpp
tempest/test-project/: project.godot  tempest.gdextension  tempest.gdextension.uid  test_scene.tscn  test_tempest.gd
(+58 files in other folders)
